# optimization-algorithms

./: CMakeLists.txt  README.md
1-ternary-search/: README.md  main.cpp
2-golden-section-search/: README.md  main.cpp
3-fibonacci-method/: README.md  main.cpp
4-newton-method/: README.md  main.cpp
ternary-search/: README.md
